# slogger

./: .gitignore  LICENSE  README.md  __init__.py  formatters.py  logger.py  pyproject.toml  test_logger.py
slogger/: __init__.py  handlers.py  logger.py
tests/: test_logger.py
