[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slogger"
version = "0.1.1"
description = "A plug-and-play Python logging package with color output, JSON formatting, rotation, and SMTP alerts"
authors = [
    {name = "Savvas", email = "savvas@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["logging", "logger", "json", "color", "smtp", "rotation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
]

[project.urls]
Homepage = "https://github.com/savtantalos/slogger"
Repository = "https://github.com/savtantalos/slogger"
Issues = "https://github.com/savtantalos/slogger/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["slogger*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []
